# SynkroDMX

./: .gitignore  .pdm-python  README.md  commits_history.txt  main.py  pyproject.toml  requirements.txt
assets/: config.yaml
notebooks/: last_schedule.json  synkrodmx_spotify_import_demo.ipynb
source/audio/: Live_Audio_Analysis.ipynb  SynkroDMX_MIDI_Analysis.ipynb  midi_loader.py  sections.py  spotify_sync.py  tempo_map.py
source/dmx/: ola_client.py  patch.py  test_send_dmx_OLA.ipynb
source/guitarpro/: test_gp.ipynb
source/pipeline/: build_show.py
source/scenes/: cues.py  generators.py
source/spotify/: .cache  .cache-spotify  __init__.py  album_colors.py  auth.py  playback.py  poller.py  schedule.py  spotify_integration.py  spotify_song_stats.ipynb  test.ipynb  test_album_cover_extractor.ipynb  types.py
