[project]
name = "synkrodmx"
version = "0.1.0"
description = "Synchronize DMX lights with music using MIDI analysis and OLA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
extend-fixable = ["W291", "W293"]
extend-select = ["D","E","F","B","N","T10"]
ignore = [
    "E203",
    "E501",
    "D203",
    "D213",
    "B006","B008","B904","B012","B024","B020",
    "D",
    "F401","F811",
]

[tool.ruff.lint.extend-per-file-ignores]
"!source/**.py" = ["D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"